<?xml version="1.0"?>
<package format="2">
  <name>object_detector</name>
  <version>1.0.0</version>
  <description>object_detector</description>
  <maintainer email="rohansingh.apjss@gmail.com">Rohn Singh</maintainer>
  <author>Rohan Singh</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf</depend>
  <depend>rviz</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

</package>
